<resources>
    <string name="app_name">CARETAKER</string>
    <string name="title_activity_sign_in">Sign-in</string>
    <string name="sign_in_succeeded_message_format">"Sign-in with %s succeeded."</string>
    <string name="sign_in_canceled_message_format">"Sign-in with %s canceled."</string>
    <string name="sign_in_failure_dialog_title">Sign-In Error</string>
    <string name="sign_in_failure_message_format">Sign-in with %1$s failed.\n%2$s</string>

    <string name="example_fab_title">Hi!!!</string>
    <string name="example_fab_description">Can I help You?</string>

    <string name="sign_in_email">Email</string>
    <string name="facebook_app_id">362513444121888</string>
    <string name="fb_login_protocol_scheme">fb362513444121888</string>
    <string name="google_cloud_messaging_package">hgdf</string>
    <string name="sign_in_username">Username/Phone Number (+15551234567)</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_new_account">Create New Account</string>
    <string name="sign_in_forgot_password">Forgot Your Password?</string>
    <string name="sign_in_or">or sign in with</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_mfa">MFA Code</string>
    <string name="title_activity_sign_up_confirm">Confirm Account</string>
    <string name="title_dialog_sign_up_failed">Sign Up Failed</string>
    <string name="forgot_password_header">Forgot your password?</string>
    <string name="forgot_password_body">Set your new password with the verification code that was sent to you.</string>
    <string name="forgot_password_input_code_hint">Verification code</string>
    <string name="forgot_password_button_hint">Set password</string>
    <string name="mfa_header">MFA verification is required to authenticate.</string>
    <string name="mfa_code_sent_message">Code sent.</string>
    <string name="verify_button_text">Verify</string>
    <string name="username_text">Username</string>
    <string name="given_name_text">Given name</string>
    <string name="email_address_text">Email address</string>
    <string name="phone_number_text">Phone number (+15551234567)</string>
    <string name="sign_up_header">Enter the following information to sign up.</string>
    <string name="sign_up_confirm_code">Confirmation code</string>
    <string name="sign_up_confirm_text">Confirm</string>
    <string name="sign_up_confirm_code_sent">A confirmation code was sent.</string>
    <string name="sign_up_confirm_enter_code">Please enter the code below to confirm your account.</string>
    <string name="sign_up_confirm_title">Confirm your account</string>
    <string name="password_change_success">Password change succeeded.</string>
    <string name="password_change_failed">Password change failed.</string>
    <string name="sign_up_success">Sign up succeeded.</string>
    <string name="sign_up_failed">Sign up failed.</string>
    <string name="login_success">Login succeeded.</string>
    <string name="login_failed">Login failed.</string>
    <string name="sign_up_confirm_success">Sign up confirmation succeeded.</string>
    <string name="sign_up_confirm_failed">Sign up confirmation failed.</string>

    <string name="action_settings">Settings</string>

    <string name="header_web_front_ent">Web Front End</string>
    <string name="header_back_end">Back End</string>
    <string name="header_mobile">Mobile</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="windows">Windows</string>
    <string name="blackberry">Blackberry</string>
    <string name="ionic">Ionic</string>
    <string name="css">CSS</string>
    <string name="html">HTML</string>
    <string name="ruby">Ruby</string>
    <string name="php">PHP</string>
    <string name="python">Python</string>

    <string name="dummy_long_text">
		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
	</string>

    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="exit">Exit</string>

    <string name="home_item_1">Medication</string>
    <string name="home_item_2">Nutrition</string>
    <string name="home_item_3">Connect</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="feature_app_conversational_bots_demo_description_header">My bot</string>
    <string name="feature_app_conversational_bots_demo_intents_header">bot instant header</string>
    <string name="nav_sub_menu_item02">Profile</string>
    <string name="nav_sub_menu_item01">Settings</string>
    <string name="nav_sub_menu">User settings</string>
    <string name="nav_item_1">Medication</string>
    <string name="nav_item_2">Nutrition</string>
    <string name="nav_item_3">Navigation item 3</string>
    <string name="drawer_header_text">Virtual CareTaker</string>

    <string name="medication_activity_collapse_title">You have a new medication now!!!</string>
    <string name="medication_activity_collapse_subtitle">this is the subtitle of the medication. just enjoy...</string>

    <string name="action_refresh">Settings</string>
    <string name="action_new">Settings</string>
    <string name="logo_desc">App logo</string>
    <string name="country_name">Nigeria</string>

    <string name="demo_medication">penicillin</string>
    <string name="demo_medication_description">This is for sick and dose is 2 per time.</string>

</resources>