<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main_layout">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:titleTextColor="#ffffff">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:orientation="vertical"
            android:layout_gravity="right">

            <ImageButton
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/imageButton"
                android:src="@drawable/fire_alarm"
                android:layout_gravity="right"
                android:background="@null"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>


    <android.support.v4.widget.DrawerLayout

        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CoordinatorLayout android:id="@+id/main_content"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <android.support.design.widget.CollapsingToolbarLayout
                    android:id="@+id/collapsingToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:contentScrim="?attr/colorPrimary"
                    app:expandedTitleMarginStart="48dp"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fitsSystemWindows="true"
                        android:id="@+id/head_image"
                        android:scaleType="centerCrop"
                        android:src="@drawable/landscape"
                        app:layout_collapseMode="parallax" />
                    <com.roughike.swipeselector.SwipeSelector
                        android:id="@+id/swipeSelector1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.CollapsingToolbarLayout>

            </android.support.design.widget.AppBarLayout>

            <android.support.v4.widget.NestedScrollView
                android:layout_height="match_parent"
                android:id="@+id/scrollview"
                android:layout_width="match_parent"
                android:layout_gravity="fill_vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:id="@+id/container"
                    android:orientation="vertical">



                    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/card1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:elevation="5dp"
                        app:cardCornerRadius="5dp"
                        app:cardBackgroundColor="@android:color/transparent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/home_item_1"
                                    android:textColor="@android:color/holo_red_dark"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">

                                    <ImageView
                                        android:layout_width="@dimen/card_image_hight_width"
                                        android:layout_height="@dimen/card_image_hight_width"
                                        android:src="@drawable/medicine" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="5dp"
                                        android:text="@string/dummy_long_text"
                                        android:textColor="@android:color/black"
                                        android:textSize="15sp" />
                                </LinearLayout>

                            </LinearLayout>


                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/card2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:elevation="5dp"
                        app:cardCornerRadius="5dp"
                        app:cardBackgroundColor="@android:color/transparent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/home_item_2"
                                    android:textColor="@android:color/holo_red_dark"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">

                                    <ImageView
                                        android:layout_width="@dimen/card_image_hight_width"
                                        android:layout_height="@dimen/card_image_hight_width"
                                        android:src="@drawable/nutrition" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="5dp"
                                        android:text="@string/dummy_long_text"
                                        android:textColor="@android:color/black"
                                        android:textSize="15sp" />
                                </LinearLayout>

                            </LinearLayout>

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/card3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:elevation="5dp"
                        app:cardCornerRadius="5dp"
                        app:cardBackgroundColor="@android:color/transparent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/home_item_3"
                                    android:textColor="@android:color/holo_red_dark"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">

                                    <ImageView
                                        android:layout_width="@dimen/card_image_hight_width"
                                        android:layout_height="@dimen/card_image_hight_width"
                                        android:src="@drawable/family" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="5dp"
                                        android:text="@string/dummy_long_text"
                                        android:textColor="@android:color/black"
                                        android:textSize="15sp" />
                                </LinearLayout>

                            </LinearLayout>

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp">

                    </LinearLayout>

                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>


            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:id="@+id/navfab"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_margin="16dp"
                android:src="@drawable/face"
                app:layout_anchor="@id/container"
                android:onClick="showNavPrompt"
                app:layout_anchorGravity="bottom|right|end" />

        </android.support.design.widget.CoordinatorLayout>

        <android.support.design.widget.NavigationView
            android:id="@+id/navigation_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/drawer_header"
            app:menu="@menu/drawer" />
    </android.support.v4.widget.DrawerLayout>
</LinearLayout>